Address pipeline issues
Addresses: https://gitlab.com/sosy-lab/software/cpachecker/-/pipelines/2204890376